# tankcosc

./: .gitignore  LICENSE  README.md  build.mjs  package.json  tsconfig.json
bots/: basic_with_socketio copy.py  basic_with_socketio.py  bot.py  pyproject.toml  scanner.py  sitter.py  spinner.py  square_shooter.py  test_util.py
cli/: .gitignore  build.mjs  package.json  test_bot.py
cli/src/: asset_fs.ts  index.ts  logger.ts  readline_promises.ts  util.ts
cli/src/bot_config/: BotConfig.ts  io.ts
cli/src/command_handler/: generate.ts  run.ts
cli/src/error/: BotConfigError.ts  BotConfigMissingError.ts
frontend/: config-overrides.js  craco.config.js  package.json
frontend/public/: index.html
frontend/src/: App.js  LoadingStatus.js  config.js  index.js  playground_executor_worker.js
public/: index.html  register.html  view.html  view_board.html
server/: .gitignore  build.mjs  package.json
server/bots/: bot.py  scanner.py  spinner copy.py
server/public/: view.html
server/src/: BulletProjectile.ts  CanvasLocation.ts  ColourGenerator.ts  DegreeAngle.ts  Player.ts  Projectile.ts  Tank.ts  config.ts  game_state.ts  index.ts
src/: BulletProjectile.ts  CanvasLocation.ts  DegreeAngle.ts  Projectile.ts  Tank.ts  command.ts  connection.ts  global.ts  index.ts
src/command/: MoveCommand.ts  PollCommand.ts  RotateCommand.ts  ScanCommand.ts  ShootCommand.ts  command.ts
src/connection/: PlayerConnection.ts  connection.ts
src/error/: CommandParameterError.ts
src/server/: io.ts  routes.ts  server.ts
src/tick/: tick.ts  update_observers.ts
(+44 files in other folders)
